--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Automatic travel inventor at your disposal.</p>
+          <p class="lead">Automatic travel inventor at your disposal. Dev mode. Real.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
