--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
+<!-- saved from url=(0071)https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Travel-sense Bitstarter</title>
+    <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script><style class="flashcontrol">object[type$="x-shockwave-flash"]:not([classid]),object[type$="futuresplash"]:not([classid]),embed[type$="x-shockwave-flash"],embed[type$="futuresplash"]{display:none !important}</style>
-    <script src="d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Parisienne|Lora' rel='stylesheet' type='text/css'>
-    
+    <script src="./My First Bitstarter_files/startup-code-jquery.js"></script>
+    <script src="./My First Bitstarter_files/startup-code-bootstrap.js"></script>
+    <link href="./My First Bitstarter_files/css" rel="stylesheet" type="text/css">
+    <link href="./My First Bitstarter_files/css(1)" rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
@@ -42,10 +43,10 @@
 
       /* Main body and headings */
       body{
-        font-family: 'Lora', serif;
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
-        font-family: 'Parisienne', cursive;
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
       }
       p.lead {
@@ -96,7 +97,7 @@
         color: #ccccff;
       }
     </style>
-  </head>
+  <style class="f011c40e651628a4b762aab5ddc6c61">object[type$="x-shockwave-flash"]:not([classid]),object[type$="futuresplash"]:not([classid]),embed[type$="x-shockwave-flash"],embed[type$="futuresplash"]{display:none !important}</style></head>
   <body style="">
 
     <!-- Mobile-friendly navbar adapted from example. -->
@@ -109,12 +110,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html#">Travel-sense</a>
+          <a class="brand" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="./index.html#">Home</a></li>
-              <li><a href="./index.html#about">About</a></li>
-              <li><a href="./index.html#contact">Contact</a></li>
+              <li class="active"><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#">Home</a></li>
+              <li><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#about">About</a></li>
+              <li><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -130,25 +131,26 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Travel-sense</h1>
+          <h1>Product: Development Version (by me)</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Automatic travel inventor at your disposal. Dev mode. Real.</p>
+          <p class="lead">One sentence description.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.imgur.com/9yfwAcu.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/9yfwAcu.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -169,6 +171,7 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -177,17 +180,23 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -197,7 +206,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/9yfwAcu.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/9yfwAcu.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -233,7 +242,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/9yfwAcu.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/9yfwAcu.jpg">
         </div>
       </div>
 
@@ -246,11 +255,11 @@
             <div class="accordion" id="accordion2">
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="./index.html#collapseOne">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#collapseOne">
                     What does FAQ stand for?
                   </a>
                 </div>
-                <div id="collapseOne" class="accordion-body collapse">
+                <div id="collapseOne" class="accordion-body collapse" style="height: 0px;">
                   <div class="accordion-inner">
                     Frequently Asked Question.
                   </div>
@@ -258,11 +267,11 @@
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="./index.html#collapseTwo">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#collapseTwo">
                     What's a Frequently Asked Question?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body collapse">
+                <div id="collapseTwo" class="accordion-body in collapse" style="height: auto;">
                   <div class="accordion-inner">
                     A question which is commonly asked by users.
                   </div>
